--- a/createx/index.html
+++ b/createx/index.html
@@ -9,13 +9,58 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Createx</title>
 </head>
-test23
-<body>
-<div class="wrapper">
-    
-</div>
 
-<script src="js/main.js"></script>
+<body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__top">
+                <div class="container">
+                    <div class="header__top-inner"> <!-- обертка для шапки для флексбокса -->
+                        <div class="header__logo logo">
+                            <img src="images/logo.svg" alt="Logo">
+                        </div> <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
+                        <div class="header__nav">
+                            <ul class="header__nav-list">
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">About Us</a>
+                                </li>
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">Courses</a>
+                                </li>
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">Events</a>
+                                </li>
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">Blog</a>
+                                </li>
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">Contacts</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="header__btn-box">
+                            <div class="header__top-btn button">
+                                Get consultation
+                            </div>
+                            <div class="header__user">
+                                <div class="header__user-btn">Log in</div>
+                                /
+                                <div class="header__user-btn">Register</div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="header__body"></div>
+        </header>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
+
