--- a/createx/index.html
+++ b/createx/index.html
@@ -16,9 +16,9 @@
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner"> <!-- обертка для шапки для флексбокса -->
-                        <div class="header__logo logo">
+                        <a class="header__logo logo" href="#">
                             <img src="images/logo.svg" alt="Logo">
-                        </div> <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
+                        </a> <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
@@ -40,13 +40,13 @@
 
                         </div>
                         <div class="header__btn-box">
-                            <div class="header__top-btn button">
+                            <a class="header__top-btn button" href="#">
                                 Get consultation
-                            </div>
-                            <div class="header__user">
-                                <div class="header__user-btn">Log in</div>
+                            </a>
+                            <div class="header__user-nav">
+                                <a class="header__user-btn" href="#">Log in</a>
                                 /
-                                <div class="header__user-btn">Register</div>
+                                <a class="header__user-btn" href="#">Register</a>
                             </div>
 
 
