commit, hero-section finished

--- a/createx/index.html
+++ b/createx/index.html
@@ -91,18 +91,22 @@
                             <span>1200</span>
                             Students graduated
                           </li>
+                          <span></span>
                           <li class="header__row-item">
                             <span>84</span>
                             Students graduated
                           </li>
+                          <span></span>
                           <li class="header__row-item">
                             <span>16</span>
                             Students graduated
                           </li>
+                          <span></span>
                           <li class="header__row-item">
                             <span>5</span>
                             Students graduated
                           </li>
+                          <span></span>
 
 
                         </ul>
