--- a/createx/index.html
+++ b/createx/index.html
@@ -1,127 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Createx</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="header__top">
-          <div class="container">
-            <div class="header__top-inner">
-              <!-- обертка для шапки для флексбокса -->
-              <div class="header__btn-box">
-                <a class="header__top-btn button" href="#">
-                  Get consultation
-                </a>
-              </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/fonts.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+  <title>Createx</title>
+</head>
 
-              <a class="header__logo logo" href="#">
-                <img src="images/logo.svg" alt="Logo" />
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-inner">
+            <!-- обертка для шапки для флексбокса -->
+            <div class="header__btn-box">
+              <a class="header__top-btn button" href="#">
+                Get consultation
               </a>
-              <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
-
-              <div class="header__user-nav">
-                <a class="header__user-btn" href="#">Log in</a>
-                /
-                <a class="header__user-btn" href="#">Register</a>
-              </div>
-
-              <div class="header__nav">
-                <ul class="header__nav-list">
-                  <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">About Us</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">Courses</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">Events</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">Blog</a>
-                  </li>
-                  <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">Contacts</a>
-                  </li>
-                </ul>
-              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="header__body">
-          <div class="container">
-            <div class="header__body-inner">
-              <div class="header__main">
-                <div class="header__content">
-                  <a class="header__play" href="#">
-                    <svg
-                      width="52"
-                      height="52"
-                      viewBox="0 0 52 52"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
-                      <path
-                        d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z"
-                        fill="white"
-                      />
-                    </svg>
-                    Play showreel
-                  </a>
-                  <h1 class="header__title">
-                    Enjoy studying with Createx Online Courses
-                  </h1>
-                  <div class="header__content-buttons">
-                    <a class="header__content-btn button button--empty" href="#"
-                      ><span>About us</span>
-                    </a>
-                    <a class="header__content-btn button" href="#">
-                      Explore courses</a
-                    >
-                  </div>
-                </div>
-                <img class="header__img" src="images/hero-image.svg" alt="" />
-              </div>
+            <a class="header__logo logo" href="#">
+              <img src="images/logo.svg" alt="Logo" />
+            </a>
+            <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
 
-              <ul class="header__row">
-                <li class="header__row-item">
-                  <span class="header__row-bold">1200</span>
-                  Students graduated
+            <div class="header__user-nav">
+              <a class="header__user-btn" href="#">Log in</a>
+              /
+              <a class="header__user-btn" href="#">Register</a>
+            </div>
+
+            <div class="header__nav">
+              <ul class="header__nav-list">
+                <li class="header__nav-item">
+                  <a class="header__nav-link" href="#">About Us</a>
                 </li>
-
-                <li class="header__row-item">
-                  <span class="header__row-dots header__row-dots--1"> </span>
-                  <span class="header__row-bold">84</span>
-                  Completed courses
+                <li class="header__nav-item">
+                  <a class="header__nav-link" href="#">Courses</a>
                 </li>
-
-                <li class="header__row-item">
-                  <span class="header__row-dots"> </span>
-                  <span class="header__row-bold">16</span>
-                  Qualified tutors
+                <li class="header__nav-item">
+                  <a class="header__nav-link" href="#">Events</a>
                 </li>
-
-                <li class="header__row-item header__row-item--1">
-                  <span class="header__row-dots header__row-dots--2"> </span>
-                  <span class="header__row-bold">5</span>
-                  Years of experience
+                <li class="header__nav-item">
+                  <a class="header__nav-link" href="#">Blog</a>
+                </li>
+                <li class="header__nav-item">
+                  <a class="header__nav-link" href="#">Contacts</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      </header>
-    </div>
+      </div>
 
-    <script src="js/main.js"></script>
-  </body>
+      <div class="header__body">
+        <div class="container">
+          <div class="header__body-inner">
+            <div class="header__main">
+              <div class="header__content">
+
+
+
+                <a class="header__play" href="https://www.youtube.com/watch?v=UB0yuWs2qD8" data-fancybox>
+
+                  <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
+                    <path
+                      d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z"
+                      fill="white" />
+                  </svg>
+                  Play showreel
+                </a>
+                <h1 class="header__title">
+                  Enjoy studying with Createx Online Courses
+                </h1>
+                <div class="header__content-buttons">
+                  <a class="header__content-btn button button--empty" href="#"><span>About us</span>
+                  </a>
+                  <a class="header__content-btn button" href="#">
+                    Explore courses</a>
+                </div>
+              </div>
+              <img class="header__img" src="images/hero-image.svg" alt="" />
+            </div>
+
+            <ul class="header__row">
+              <li class="header__row-item">
+                <span class="header__row-bold">1200</span>
+                Students graduated
+              </li>
+
+              <li class="header__row-item">
+                <span class="header__row-dots header__row-dots--1"> </span>
+                <span class="header__row-bold">84</span>
+                Completed courses
+              </li>
+
+              <li class="header__row-item">
+                <span class="header__row-dots"> </span>
+                <span class="header__row-bold">16</span>
+                Qualified tutors
+              </li>
+
+              <li class="header__row-item header__row-item--1">
+                <span class="header__row-dots header__row-dots--2"> </span>
+                <span class="header__row-bold">5</span>
+                Years of experience
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
