finished play button video

--- a/createx/index.html
+++ b/createx/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>  
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -60,7 +61,7 @@
                     <div class="header__body-inner">
                         <div class="header__main">
                             <div class="header__content">
-                                <a class="header__play" href="#">
+                                <a class="header__play" href="https://www.youtube.com/watch?v=UB0yuWs2qD8" data-fancybox>
                                     <svg width="52" height="52" viewBox="0 0 52 52" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
@@ -81,32 +82,32 @@
                                 </div>
                             </div>
                             <img class="header__img" src="images/hero-image.svg" alt="">
-                            
+
 
 
                         </div>
 
                         <ul class="header__row">
-                          <li class="header__row-item">
-                            <span>1200</span>
-                            Students graduated
-                          </li>
-                          <span></span>
-                          <li class="header__row-item">
-                            <span>84</span>
-                            Students graduated
-                          </li>
-                          <span></span>
-                          <li class="header__row-item">
-                            <span>16</span>
-                            Students graduated
-                          </li>
-                          <span></span>
-                          <li class="header__row-item">
-                            <span>5</span>
-                            Students graduated
-                          </li>
-                          <span></span>
+                            <li class="header__row-item">
+                                <span>1200</span>
+                                Students graduated
+                            </li>
+                            <span></span>
+                            <li class="header__row-item">
+                                <span>84</span>
+                                Students graduated
+                            </li>
+                            <span></span>
+                            <li class="header__row-item">
+                                <span>16</span>
+                                Students graduated
+                            </li>
+                            <span></span>
+                            <li class="header__row-item">
+                                <span>5</span>
+                                Students graduated
+                            </li>
+
 
 
                         </ul>
@@ -116,8 +117,10 @@
         </header>
     </div>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
-    <div>test2 </div>
 </body>
 
 </html>
