finished first page

--- a/createx/index.html
+++ b/createx/index.html
@@ -115,6 +115,14 @@
                 </div>
             </div>
         </header>
+<main class="main">
+    <div class="containet">
+        
+    </div>
+</main>
+
+<footer class="footer"></footer>
+
     </div>
 
 
