--- a/createx/index.html
+++ b/createx/index.html
@@ -105,7 +105,7 @@
                             <span></span>
                             <li class="header__row-item">
                                 <span>5</span>
-                                Students graduated
+                                Years of experience
                             </li>
 
 
