--- a/createx/index.html
+++ b/createx/index.html
@@ -112,11 +112,11 @@
 
         <main class="main">
             <div class="container">
-                <div class="main__section">
-                    <div class="main__content">
-                        <h2 class="main__title">About us</h2>
-                        <h3 class="main__title-2">Createx Online School</h3>
-                        <h4 class="main__title-3">
+                <div class="about__section">
+                    <div class="about__content">
+                        <h2 class="about__title">About us</h2>
+                        <h3 class="about__title-2">Createx Online School</h3>
+                        <h4 class="about__title-3">
                             Createx Online School is a leader in online studying. We have
                             lots of courses and programs from the main market experts.
                         </h4>
@@ -128,23 +128,23 @@
                             courses and online events that we organise.
                         </p>
 
-                        <div class="header__content-buttons">
-                            <a class="header__content-btn button button--empty" href="#"><span>About us</span>
+                        <div class="about__content-buttons">
+                            <a class="about__content-btn button button--empty" href="#"><span>Explore events</span>
                             </a>
-                            <a class="header__content-btn button" href="#">
-                                Explore courses</a>
+                            <a class="about__content-btn button" href="#">
+                                Browse courses</a>
                         </div>
                     </div>
 
-                    <img src="images/about-image.svg" alt="About-img" class="main__img" />
+                    <img src="images/about-image.svg" alt="About-img" class="about__img" />
                    
                 </div>
 
-                <div class="main__section-2">
-                    <img src="images/numbers-img.jpg" alt="numbers-img" class="main__img-2" />
+                <div class="about__section-2">
+                    <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-2" />
 
-                    <div class="main__content-2">
-                        <ul class="main__list">
+                    <div class="about__content-2">
+                        <ul class="about__list">
                             <li><span> 1200 </span> students graduated</li>
                             <li><span> 84 </span> completed courses</li>
                             <li><span> 16 </span> qualified tutors</li>
@@ -154,7 +154,12 @@
                 </div>
             </div>
 
+            <div class="container">
+                <div class="asdfasdfsdfs__section"></div>
 
+
+
+            </div>
 
 
 
