resizing  about__img

--- a/createx/index.html
+++ b/createx/index.html
@@ -141,7 +141,10 @@
                 </div>
 
                 <div class="about__section-2">
-                    <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-2" />
+                    <div class="about__img">
+                        <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-box" />
+                    </div>
+                    
 
                     <div class="about__content-2">
                         <ul class="about__list">
