--- a/createx/index.html
+++ b/createx/index.html
@@ -141,8 +141,8 @@
                 </div>
 
                 <div class="about__section-2">
-                    <div class="about__img">
-                        <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-box" />
+                    <div class="about__img-box">
+                        <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-2" />
                     </div>
                     
 
