finished courses title

--- a/createx/index.html
+++ b/createx/index.html
@@ -137,14 +137,14 @@
                     </div>
 
                     <img src="images/about-image.svg" alt="About-img" class="about__img" />
-                   
+
                 </div>
 
                 <div class="about__section-2">
                     <div class="about__img-box">
                         <img src="images/numbers-img.jpg" alt="numbers-img" class="about__img-2" />
                     </div>
-                    
+
 
                     <div class="about__content-2">
                         <ul class="about__list">
@@ -158,12 +158,12 @@
             </div>
 
             <div class="container">
-                <div class="asdfasdfsdfs__section"></div>
-
-
+                <div class="courses__titles">
+                    <p class="courses__subtitle">our main directions</p>
+                    <h2 class="courses__title">What do we teach</h2>
+                </div>
 
             </div>
-
 
 
         </main>
