courses cards decorated

--- a/createx/index.html
+++ b/createx/index.html
@@ -168,21 +168,29 @@
 
                 <nav class="courses__nav">
                     <ul class="courses__item">
-                        <li><a href="#">All</a></li>
                         <li>
-                            <a href="#"> Marketing </a>
+                            <button class="courses__nav-btn">All</button>
+
                         </li>
                         <li>
-                            <a href="#"> Management </a>
+                            <button class="courses__nav-btn">Marketing</button>
+
                         </li>
                         <li>
-                            <a href="#"> HR & Recruting </a>
+                            <button class="courses__nav-btn">Management</button>
+
                         </li>
                         <li>
-                            <a href="#"> Design </a>
+                            <button class="courses__nav-btn"> HR & Recruting</button>
+
                         </li>
                         <li>
-                            <a href="#"> Development </a>
+                            <button class="courses__nav-btn">Design</button>
+
+                        </li>
+                        <li>
+                            <button class="courses__nav-btn">Development</button>
+
                         </li>
                     </ul>
                 </nav>
@@ -192,60 +200,71 @@
 
                     <div class="course__cards-item-1">
                         <img src="images/directions/1.jpg" alt="">
-                        <button>Marketing</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
 
-                        <!-- <div class="course__cards-description"></div> -->
+                        <div class="course__cards-inner">
+                            <button>Marketing</button>
+                            <p class="course__cards-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                                dictum eu viverra faucibus.
+                                Viverra scelerisque consequat.</p>
+                            <a class="course__cards-link" href="#">Check courses</a>
+                        </div>
+
                     </div>
 
                     <div class="course__cards-item-2">
                         <img src="images/directions/2.jpg" alt="">
-                        <button>Management</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
+                        <div class="course__cards-inner">
 
-                        <!-- <div class="course__cards-description"></div> -->
+                            <button>Management</button>
+                            <p class="course__cards-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                                dictum eu viverra faucibus.
+                                Viverra scelerisque consequat.</p>
+                            <a class="course__cards-link" href="#">Check courses</a>
+                        </div>
+
                     </div>
 
                     <div class="course__cards-item-3">
                         <img src="images/directions/3.jpg" alt="">
-                        <button>HR & Recruting</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
+                        <div class="course__cards-inner">
 
-                        <!-- <div class="course__cards-description"></div> -->
+                            <button>HR & Recruting</button>
+                            <p class="course__cards-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                                dictum eu viverra faucibus.
+                                Viverra scelerisque consequat.</p>
+                            <a class="course__cards-link" href="#">Check courses</a>
+                        </div>
+
                     </div>
 
                     <div class="course__cards-item-4">
                         <img src="images/directions/4.jpg" alt="">
-                        <button>Design</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
+                        <div class="course__cards-inner">
 
-                        <!-- <div class="course__cards-description"></div> -->
+                            <button>Design</button>
+                            <p class="course__cards-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                                dictum eu viverra faucibus.
+                                Viverra scelerisque consequat.</p>
+                            <a class="course__cards-link" href="#">Check courses</a>
+                        </div>
+
                     </div>
                     <div class="course__cards-item-5">
                         <img src="images/directions/5.jpg" alt="">
-                        <button>Development</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
+                        
+                        <div class="course__cards-inner">
+                            <button>Development</button>
+                            <p class="course__cards-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                                dictum eu viverra faucibus.
+                                Viverra scelerisque consequat.</p>
+                            <a class="course__cards-link" href="#">Check courses</a>
+                        </div>
 
-                        <!-- <div class="course__cards-description"></div> -->
                     </div>
                     <div class="course__cards-item-6">
-                        <img src="images/directions/6.jpg" alt="">
-                        <button>Marketing</button>
-                        <p>Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus.
-                            Viverra scelerisque consequat.</p>
-                        <a href="#">Check courses</a>
+                        <p class="course__last-card-text">New studying program coming soon...</p>
 
-                        <!-- <div class="course__cards-description"></div> -->
+
                     </div>
 
 
