hover effect for courses cards added

--- a/createx/index.html
+++ b/createx/index.html
@@ -198,7 +198,7 @@
 
                 <div class="course__cards">
 
-                    <div class="course__cards-item-1">
+                    <div class="course__cards-item-1 cards">
                         <img src="images/directions/1.jpg" alt="">
 
                         <div class="course__cards-inner">
@@ -211,7 +211,7 @@
 
                     </div>
 
-                    <div class="course__cards-item-2">
+                    <div class="course__cards-item-2 cards">
                         <img src="images/directions/2.jpg" alt="">
                         <div class="course__cards-inner">
 
@@ -224,7 +224,7 @@
 
                     </div>
 
-                    <div class="course__cards-item-3">
+                    <div class="course__cards-item-3 cards">
                         <img src="images/directions/3.jpg" alt="">
                         <div class="course__cards-inner">
 
@@ -237,7 +237,7 @@
 
                     </div>
 
-                    <div class="course__cards-item-4">
+                    <div class="course__cards-item-4 cards">
                         <img src="images/directions/4.jpg" alt="">
                         <div class="course__cards-inner">
 
@@ -249,7 +249,7 @@
                         </div>
 
                     </div>
-                    <div class="course__cards-item-5">
+                    <div class="course__cards-item-5 cards">
                         <img src="images/directions/5.jpg" alt="">
                         
                         <div class="course__cards-inner">
