--- a/createx/index.html
+++ b/createx/index.html
@@ -279,7 +279,7 @@
                     </div>
 
                     <div class="courses__sert-box">
-                        <img src="images/award.jpg" alt="" class="courses__sert-img">
+                        <img src="images/award-cut.jpg" alt="" class="courses__sert-img">
                     </div>
                 </div>
 
