finished sertificate section

--- a/createx/index.html
+++ b/createx/index.html
@@ -189,7 +189,8 @@
                         <div class="directions__body">
                             <ul class="directions__filter-box">
                                 <li class="directions__filter-item">
-                                    <button class="directions__filter-btn directions__filter-btn--active" type="button" data-filter="all">
+                                    <button class="directions__filter-btn directions__filter-btn--active" type="button"
+                                        data-filter="all">
                                         All
                                     </button>
                                 </li>
@@ -320,6 +321,37 @@
                     </div>
                 </div>
             </section>
+
+
+            <section class="cert">
+                <div class="container">
+                    <div class="cert__inner">
+                        <div class="cert__content">
+                            <div class="cert__heading">
+                                <p class="cert__subtitle">Createx Certificate</p>
+                                <h2 class="cert__title">Your expertise will be confirmed</h2>                               
+                                <p class="cert__paragraph">We are accredited by international professional organizations
+                            </div>
+
+                            <div class="cert__image-logo-box">
+                                <img src="images/logos/1.svg" alt="1">
+                                <img src="images/logos/2.svg" alt="2">
+                                <img src="images/logos/3.svg" alt="3">
+                            </div>
+                        </div>
+
+
+
+                        <div class="cert__image-box">
+                            <img src="images/award.jpg" alt="">
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+
+
         </main>
 
         <footer class="footer"></footer>
