--- a/createx/index.html
+++ b/createx/index.html
@@ -111,7 +111,7 @@
         </header>
 
         <main class="main">
-            <section class="about">
+            <section class="main_about about">
                 <div class="container">
                     <div class="about__inner">
                         <div class="about__createx">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </section>
-            <section class="directions">
+            <section class="main_directions directions">
                 <div class="container">
                     <div class="directions__inner">
                         <div class="directions__heading ">
@@ -189,7 +189,8 @@
                         <div class="directions__body">
                             <ul class="directions__filter-box">
                                 <li class="directions__filter-item">
-                                    <button class="directions__filter-btn directions__filter-btn--active" type="button" data-filter="all">
+                                    <button class="directions__filter-btn directions__filter-btn--active" type="button"
+                                        data-filter="all">
                                         All
                                     </button>
                                 </li>
@@ -319,6 +320,39 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="main__cert cert">
+                <div class="container">
+                    <div class="sert__inner">
+                        <div class="sert__content">
+                            <div class="cert__heading heading">
+                                <p class="heading__subtitle">Createx Certificate</p>
+                                <h2 class="heading__title">Your expertise will be confirmed</h2>
+                                                          
+                            </div>
+                            <p class="sert__text">
+                                We are accredited by international professional organizations and institutes:
+                            </p>  
+                            <ul class="sert__logos">
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/1.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/2.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/3.svg" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sert__image-box">
+                            <img src="images/award.jpg" alt="Сертификат">
+                        </div>
+                    </div>
+                </div>
+
+
+
             </section>
         </main>
 
