--- a/createx/index.html
+++ b/createx/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Createx</title>
 </head>
 
@@ -16,10 +16,12 @@
         <header class="header">
             <div class="header__top">
                 <div class="container">
-                    <div class="header__top-inner"> <!-- обертка для шапки для флексбокса -->
+                    <div class="header__top-inner">
+                        <!-- обертка для шапки для флексбокса -->
                         <a class="header__logo logo" href="#">
-                            <img src="images/logo.svg" alt="Logo">
-                        </a> <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
+                            <img src="images/logo.svg" alt="Logo" />
+                        </a>
+                        <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
@@ -38,7 +40,6 @@
                                     <a class="header__nav-link" href="#">Contacts</a>
                                 </li>
                             </ul>
-
                         </div>
                         <div class="header__btn-box">
                             <a class="header__top-btn button" href="#">
@@ -49,8 +50,6 @@
                                 /
                                 <a class="header__user-btn" href="#">Register</a>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
@@ -73,19 +72,16 @@
                                     Play showreel
                                 </a>
                                 <h1 class="header__title">
-                                    Enjoy studying
-                                    with Createx Online Courses
+                                    Enjoy studying with Createx Online Courses
                                 </h1>
                                 <div class="header__content-buttons">
                                     <a class="header__content-btn button button--empty" href="#"><span>About us</span>
                                     </a>
-                                    <a class="header__content-btn button" href="#"> Explore courses</a>
+                                    <a class="header__content-btn button" href="#">
+                                        Explore courses</a>
                                 </div>
                             </div>
-                            <img class="header__img" src="images/hero-image.svg" alt="">
-
-
-
+                            <img class="header__img" src="images/hero-image.svg" alt="" />
                         </div>
 
                         <ul class="header__row">
@@ -108,18 +104,14 @@
                                 <span>5</span>
                                 Years of experience
                             </li>
-
-
-
                         </ul>
                     </div>
                 </div>
             </div>
         </header>
 
-
         <main class="main">
-            <section class="about">
+            <section class="main_about about">
                 <div class="container">
                     <div class="about__inner">
                         <div class="about__createx">
@@ -130,17 +122,19 @@
                                 </div>
 
                                 <div class="about__text">
-
-
-                                    <p class="about__paragraph about__paragraph--accent">Createx Online School
-                                        is a leader in online
-                                        studying. We have
-                                        lots of courses and programs from the main market experts.</p>
-                                    <p class="about__text">We provide relevant approaches to online learning,
-                                        internships
-                                        and employment in the largest companies in the country. Our educational programs
-                                        help you get a new specialty from scratch. During your studies, we will help you
-                                        find a job. Check the courses and online events that we organise.</p>
+                                    <p class="about__paragraph about__paragraph--accent">
+                                        Createx Online School is a leader in online studying.
+                                        We have lots of courses and programs from the main market
+                                        experts.
+                                    </p>
+                                    <p class="about__text">
+                                        We provide relevant approaches to online learning,
+                                        internships and employment in the largest companies in the
+                                        country. Our educational programs help you get a new
+                                        specialty from scratch. During your studies, we will help
+                                        you find a job. Check the courses and online events that
+                                        we organise.
+                                    </p>
                                 </div>
 
                                 <div class="about__btn-box">
@@ -148,18 +142,14 @@
                                     </a>
                                     <a class="about__btn button" href="#"> Browse courses</a>
                                 </div>
-
                             </div>
 
-
-                            <img src="images/about-image.svg" alt="" class="about__img">
-
-
+                            <img src="images/about-image.svg" alt="" class="about__img" />
                         </div>
 
                         <div class="about__values">
                             <div class="about__image-box">
-                                <img src="images/numbers-img.jpg" alt="">
+                                <img src="images/numbers-img.jpg" alt="" />
                             </div>
 
                             <ul class="about__numbers">
@@ -171,7 +161,6 @@
                                 <li class="about__number">
                                     <span>84</span>
                                     completed courses
-
                                 </li>
 
                                 <li class="about__number">
@@ -183,24 +172,196 @@
                                     <span>5</span>
                                     years of experience
                                 </li>
-
                             </ul>
                         </div>
-
                     </div>
                 </div>
             </section>
+            <section class="main_directions directions">
+                <div class="container">
+                    <div class="directions__inner">
+                        <div class="directions__heading ">
+                            <div class="directions__heading heading heading--text-center">
+                                <p class="heading__subtitle">our main directions</p>
+                                <h2 class="heading__title">What do we teach</h2>
+                            </div>
+                        </div>
+                        <div class="directions__body">
+                            <ul class="directions__filter-box">
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn directions__filter-btn--active" type="button"
+                                        data-filter="all">
+                                        All
+                                    </button>
+                                </li>
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn" type="button"
+                                        data-filter=".directions__list-item--marketing">
+                                        Marketing
+                                    </button>
+                                </li>
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn" type="button"
+                                        data-filter=".directions__list-item--management">
+                                        Management
+                                    </button>
+                                </li>
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn" type="button"
+                                        data-filter=".directions__list-item--hr">
+                                        HR & Recruting
+                                    </button>
+                                </li>
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn" type="button"
+                                        data-filter=".directions__list-item--design">
+                                        Design
+                                    </button>
+                                </li>
+                                <li class="directions__filter-item">
+                                    <button class="directions__filter-btn" type="button"
+                                        data-filter=".directions__list-item--development">
+                                        Development
+                                    </button>
+                                </li>
+                            </ul>
+
+                            <ul class="directions__list">
+                                <!-- класс для плагина mixitup -->
+                                <li class="mix directions__list-item directions__list-item--marketing" data-order="1">
+                                    <a href="#" class="directions__list-link directions__list-link--active">
+                                        <div class="directions__image-box">
+                                            <img src="images/directions/1.jpg" alt="" />
+                                        </div>
+                                        <div class="directions__link-content">
+                                            <div class="directions__link-tag">Marketing</div>
+                                            <p class="directions__link-text">
+                                                Odio posuere netus quisque faucibus lectus arcu donec.
+                                                Eget dictum eu viverra faucibus. Viverra scelerisque
+                                                consequat.
+                                            </p>
+                                            <div class="directions__link-btn">Check courses</div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="mix directions__list-item directions__list-item--management" data-order="2">
+                                    <a href="#" class="directions__list-link">
+                                        <div class="directions__image-box">
+                                            <img src="images/directions/2.jpg" alt="" />
+                                        </div>
+                                        <div class="directions__link-content">
+                                            <div class="directions__link-tag">Management</div>
+                                            <p class="directions__link-text">
+                                                Odio posuere netus quisque faucibus lectus arcu donec.
+                                                Eget dictum eu viverra faucibus. Viverra scelerisque
+                                                consequat.
+                                            </p>
+                                            <div class="directions__link-btn">Check courses</div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="mix directions__list-item directions__list-item--hr" data-order="3">
+                                    <a href="#" class="directions__list-link">
+                                        <div class="directions__image-box">
+                                            <img src="images/directions/3.jpg" alt="" />
+                                        </div>
+                                        <div class="directions__link-content">
+                                            <div class="directions__link-tag">HR & Recruting</div>
+                                            <p class="directions__link-text">
+                                                Odio posuere netus quisque faucibus lectus arcu donec.
+                                                Eget dictum eu viverra faucibus. Viverra scelerisque
+                                                consequat.
+                                            </p>
+                                            <div class="directions__link-btn">Check courses</div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="mix directions__list-item directions__list-item--design" data-order="4">
+                                    <a href="#" class="directions__list-link">
+                                        <div class="directions__image-box">
+                                            <img src="images/directions/4.jpg" alt="" />
+                                        </div>
+                                        <div class="directions__link-content">
+                                            <div class="directions__link-tag">Design</div>
+                                            <p class="directions__link-text">
+                                                Odio posuere netus quisque faucibus lectus arcu donec.
+                                                Eget dictum eu viverra faucibus. Viverra scelerisque
+                                                consequat.
+                                            </p>
+                                            <div class="directions__link-btn">Check courses</div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="mix directions__list-item list-item directions__list-item--development"
+                                    data-order="5">
+                                    <a href="#" class="directions__list-link">
+                                        <div class="directions__image-box">
+                                            <img src="images/directions/5.jpg" alt="" />
+                                        </div>
+                                        <div class="directions__link-content">
+                                            <div class="directions__link-tag">Development</div>
+                                            <p class="directions__link-text">
+                                                Odio posuere netus quisque faucibus lectus arcu donec.
+                                                Eget dictum eu viverra faucibus. Viverra scelerisque
+                                                consequat.
+                                            </p>
+                                            <div class="directions__link-btn">Check courses</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="mix directions__list-item directions__list-item--empty" data-order="6">
+                                    <span> New studying program coming soon... </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="main__cert cert">
+                <div class="container">
+                    <div class="sert__inner">
+                        <div class="sert__content">
+                            <div class="cert__heading heading">
+                                <p class="heading__subtitle">Createx Certificate</p>
+                                <h2 class="heading__title">Your expertise will be confirmed</h2>
+                                                          
+                            </div>
+                            <p class="sert__text">
+                                We are accredited by international professional organizations and institutes:
+                            </p>  
+                            <ul class="sert__logos">
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/1.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/2.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/3.svg" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sert__image-box">
+                            <img src="images/award.jpg" alt="Сертификат">
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </section>
         </main>
 
-
-
         <footer class="footer"></footer>
-
     </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
