slider on 5 page

--- a/createx/index.html
+++ b/createx/index.html
@@ -327,8 +327,7 @@
                         <div class="sert__content">
                             <div class="cert__heading heading">
                                 <p class="heading__subtitle">Createx Certificate</p>
-                                <h2 class="heading__title">Your expertise will be confirmed</h2>
-                                                          
+                                <h2 class="heading__title">Your expertise will be confirmed</h2>                       
                             </div>
                             <p class="sert__text">
                                 We are accredited by international professional organizations and institutes:
@@ -354,6 +353,113 @@
 
 
             </section>
+
+<section class="main__team team">
+    <div class="container">
+        <div class="team__inner">
+            <div class="team__heading heading">
+                <p class="heading__subtitle">Best tutors are all here</p>
+                <h2 class="heading__title">Meet our team</h2>                       
+            </div>
+            <div class="team__slider">
+                <div class="team__slide">
+                    <div class="team__image-box">
+                        <div class="team__image">
+                            <img src="images/team/1.jpg" alt="">
+                        </div>
+                        <ul class="team__socials">
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__info">
+                        <div class="team__indo-name">Dianne Russell</div>
+                        <div class="team__info-position">Founder and CEO</div>
+                    </div>
+                </div>
+
+
+                <div class="team__slide">
+                    <div class="team__image-box">
+                        <div class="team__image">
+                            <img src="images/team/2.jpg" alt="">
+                        </div>
+                        <ul class="team__socials">
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__info">
+                        <div class="team__indo-name">Jerome Bell</div>
+                        <div class="team__info-position">Founder and Program Director</div>
+                    </div>
+                </div> <div class="team__slide">
+                    <div class="team__image-box">
+                        <div class="team__image">
+                            <img src="images/team/3.jpg" alt="">
+                        </div>
+                        <ul class="team__socials">
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__info">
+                        <div class="team__indo-name">Kristin Watson</div>
+                        <div class="team__info-position">Marketer, Curator of Marketing Course</div>
+                    </div>
+                </div> <div class="team__slide">
+                    <div class="team__image-box">
+                        <div class="team__image">
+                            <img src="images/team/4.jpg" alt="">
+                        </div>
+                        <ul class="team__socials">
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                            <li class="team__social-item">
+                                <a href="#" class="team__social-link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__info">
+                        <div class="team__indo-name">Marvin McKinney</div>
+                        <div class="team__info-position">PM, Curator of Management Course</div>
+                    </div>
+                </div>  
+
+
+
+
+
+            </div>
+        </div>
+    </div>
+</section>
+
         </main>
 
         <footer class="footer"></footer>
