--- a/createx/index.html
+++ b/createx/index.html
@@ -361,6 +361,7 @@
                         <div class="team__heading heading">
                             <p class="heading__subtitle">Best tutors are all here</p>
                             <h2 class="heading__title">Meet our team</h2>
+                            <div class="team__slider-arrow"></div>
                         </div>
                         <div class="team__slider">
                             <div class="team__slide">
