--- a/createx/index.html
+++ b/createx/index.html
@@ -796,6 +796,7 @@
 
                             </div>
 
+                            <div class="test-slider-dots"></div>
 
                         </div>
 
