start working on akkorion

--- a/createx/index.html
+++ b/createx/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/accordion.css" />
+
     <title>Createx</title>
 </head>
 
@@ -965,6 +967,28 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="accordion" id="accordion-1">
+                    <div class="accordion__item accordion__item_show">
+                        <div class="accordion__header">
+                            Lesson 1. Aliquet lectus urna viverra in odio.
+                        </div>
+                        <div class="accordion__body">
+                            Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                            ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                            sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                            vitae accumsan id.
+                        </div>
+                    </div>
+                    <div class="accordion__item">
+                        <div class="accordion__header">
+                            Заголовок 2
+                        </div>
+                        <div class="accordion__body">
+                            Содержимое 2
+                        </div>
+                    </div>
+
             </section>
 
         </main>
@@ -977,6 +1001,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/mixitup.min.js"></script>
+    <script src="js/accordion.js"></script>
     <script src="js/main.js"></script>
 </body>
 
