added ul programms

--- a/createx/index.html
+++ b/createx/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/accordion.css" />
+    <!-- <link rel="stylesheet" href="css/accordion.css" /> -->
 
     <title>Createx</title>
 </head>
@@ -919,6 +919,102 @@
                         </div>
 
                         <div class="program__wrapper">
+
+                            <div class="accordion" id="accordion-1">
+                                <div class="accordion__item accordion__item_show">
+                                    <div class="accordion__header">
+                                        Lesson 1. <p>Aliquet lectus urna viverra in odio.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 2. <p>Orci commodo, viverra orci mollis ut euismod.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 3. <p>Sagittis vitae facilisi rutrum amet mauris quisque vel.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 4. <p>In id dolor quis nunc, urna hendrerit pharetra.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 5. <p>Est, ut tempus id rutrum facilisi.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 6. <p>Amet nec in pellentesque.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 7. <p>Massa vel arcu mauris, id vel rhoncus mattis quis.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+                                <div class="accordion__item">
+                                    <div class="accordion__header">
+                                        Lesson 8. <p>Neque, cursus sapien nullam id.</p>
+                                    </div>
+                                    <div class="accordion__body">
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        vitae accumsan id.
+                                    </div>
+                                </div>
+
+
+
+
+
+<!--                             
                             <ul class="program__lessons">
                                 <li class="program__lesson-number program__lesson-number--minus">Lesson 1.<p>Aliquet
                                         lectus urna viverra in
@@ -931,7 +1027,6 @@
                                     mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur faucibus
                                     porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
                                     vitae accumsan id.</span>
-
                                 <li class="program__lesson-number">Lesson 2.
                                     <p>Orci commodo, viverra orci mollis ut euismod.</p>
                                 </li>
@@ -953,14 +1048,14 @@
                                 <li class="program__lesson-number">Lesson 8.
                                     <p>Neque, cursus sapien nullam id.</p>
                                 </li>
-                            </ul>
+                            </ul> -->
 
 
 
 
-                            <div class="program__image-box">
+                            <!-- <div class="program__image-box">
                                 <img src="images/program-img.svg" alt="program image">
-                            </div>
+                            </div> -->
 
 
 
@@ -968,26 +1063,7 @@
                     </div>
                 </div>
 
-                <div class="accordion" id="accordion-1">
-                    <div class="accordion__item accordion__item_show">
-                        <div class="accordion__header">
-                            Lesson 1. Aliquet lectus urna viverra in odio.
-                        </div>
-                        <div class="accordion__body">
-                            Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                            ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                            sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
-                            vitae accumsan id.
-                        </div>
-                    </div>
-                    <div class="accordion__item">
-                        <div class="accordion__header">
-                            Заголовок 2
-                        </div>
-                        <div class="accordion__body">
-                            Содержимое 2
-                        </div>
-                    </div>
+                
 
             </section>
 
